# MotionDetector

./: CMakeLists.txt  Camera.cpp  README.md
